--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
             padding: 20px;
             box-sizing: border-box;
             background-color: #2c3e50;
             color: #ecf0f1;
         }
-        #ip, #country {
+        #ipv4, #ipv6, #country {
             font-size: 24px;
             margin: 10px 0;
+            text-align: center;
         }
         #flag {
             margin: 10px 0;
@@ -39,6 +40,7 @@
             border: none;
             border-radius: 5px;
             transition: background-color 0.3s ease;
+            margin: 5px;
         }
         button:hover {
             background-color: #465c73;
@@ -46,33 +48,51 @@
     </style>
 </head>
 <body>
-    <div id="ip"></div>
+    <div id="ipv4"></div>
+    <div id="ipv6"></div>
     <div id="country"></div>
     <div id="flag"></div>
-    <button onclick="copyIP()">Copy IP</button>
+    <div>
+        <button onclick="copyIP('ipv4')">Copy IPv4</button>
+        <button onclick="copyIP('ipv6')">Copy IPv6</button>
+    </div>
     <script>
         async function getIPInfo() {
             try {
                 const response = await fetch('https://ipapi.co/json/');
                 const data = await response.json();
-                document.getElementById('ip').textContent = data.ip;
+                
+                document.getElementById('ipv4').textContent = `IPv4: ${data.ip}`;
                 document.getElementById('country').textContent = data.country_name;
                 displayFlag(data.country_code);
+
+                // Fetch IPv6 if available
+                try {
+                    const ipv6Response = await fetch('https://api64.ipify.org?format=json');
+                    const ipv6Data = await ipv6Response.json();
+                    document.getElementById('ipv6').textContent = `IPv6: ${ipv6Data.ip}`;
+                } catch (error) {
+                    console.error('Error fetching IPv6:', error);
+                    document.getElementById('ipv6').textContent = 'IPv6: Not available';
+                }
             } catch (error) {
                 console.error('Error fetching IP info:', error);
             }
         }
+
         function displayFlag(countryCode) {
             const flagElement = document.getElementById('flag');
             const flagUrl = `https://flagcdn.com/w80/${countryCode.toLowerCase()}.png`;
             flagElement.innerHTML = `<img src="${flagUrl}" alt="Country flag">`;
         }
-        function copyIP() {
-            const ip = document.getElementById('ip').textContent;
+
+        function copyIP(type) {
+            const ip = document.getElementById(type).textContent.split(': ')[1];
             navigator.clipboard.writeText(ip)
-                .then(() => alert('IP copied to clipboard!'))
+                .then(() => alert(`${type.toUpperCase()} copied to clipboard!`))
                 .catch(err => console.error('Error copying IP:', err));
         }
+
         getIPInfo();
     </script>
 </body>
