--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             box-sizing: border-box;
             background-color: #2c3e50;
             color: #ecf0f1;
+            text-align: center;
         }
-        #ipv4, #ipv6, #country {
+        #info {
             font-size: 24px;
             margin: 10px 0;
-            text-align: center;
         }
         #flag {
             margin: 10px 0;
@@ -45,13 +45,19 @@
         button:hover {
             background-color: #465c73;
         }
+        .loading {
+            font-size: 20px;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
-    <div id="ipv4"></div>
-    <div id="ipv6"></div>
-    <div id="country"></div>
-    <div id="flag"></div>
+    <div id="info">
+        <div id="ipv4">Loading IPv4...</div>
+        <div id="ipv6">Loading IPv6...</div>
+        <div id="country"></div>
+        <div id="flag"></div>
+    </div>
     <div>
         <button onclick="copyIP('ipv4')">Copy IPv4</button>
         <button onclick="copyIP('ipv6')">Copy IPv6</button>
@@ -59,24 +65,28 @@
     <script>
         async function getIPInfo() {
             try {
-                const response = await fetch('https://ipapi.co/json/');
-                const data = await response.json();
-                
-                document.getElementById('ipv4').textContent = `IPv4: ${data.ip}`;
-                document.getElementById('country').textContent = data.country_name;
-                displayFlag(data.country_code);
+                // Fetch IPv4 and country info
+                const ipv4Response = await fetch('https://ipapi.co/json/');
+                const ipv4Data = await ipv4Response.json();
+                document.getElementById('ipv4').textContent = `IPv4: ${ipv4Data.ip}`;
+                document.getElementById('country').textContent = ipv4Data.country_name;
+                displayFlag(ipv4Data.country_code);
 
-                // Fetch IPv6 if available
+                // Try to fetch IPv6 info if IPv4 fetching was successful
                 try {
                     const ipv6Response = await fetch('https://api64.ipify.org?format=json');
                     const ipv6Data = await ipv6Response.json();
                     document.getElementById('ipv6').textContent = `IPv6: ${ipv6Data.ip}`;
-                } catch (error) {
-                    console.error('Error fetching IPv6:', error);
+                } catch (ipv6Error) {
+                    console.error('Error fetching IPv6:', ipv6Error);
                     document.getElementById('ipv6').textContent = 'IPv6: Not available';
                 }
             } catch (error) {
                 console.error('Error fetching IP info:', error);
+                document.getElementById('ipv4').textContent = 'Error fetching IP information';
+                document.getElementById('ipv6').textContent = '';
+                document.getElementById('country').textContent = '';
+                document.getElementById('flag').innerHTML = '';
             }
         }
 
@@ -87,10 +97,15 @@
         }
 
         function copyIP(type) {
-            const ip = document.getElementById(type).textContent.split(': ')[1];
-            navigator.clipboard.writeText(ip)
-                .then(() => alert(`${type.toUpperCase()} copied to clipboard!`))
-                .catch(err => console.error('Error copying IP:', err));
+            const ipElement = document.getElementById(type);
+            if (ipElement.textContent.includes(': ')) {
+                const ip = ipElement.textContent.split(': ')[1];
+                navigator.clipboard.writeText(ip)
+                    .then(() => alert(`${type.toUpperCase()} copied to clipboard!`))
+                    .catch(err => console.error('Error copying IP:', err));
+            } else {
+                alert('No IP address to copy');
+            }
         }
 
         getIPInfo();
